Add Docker production deployment for Hetzner VPS